[gd_scene load_steps=10 format=2]

[ext_resource path="res://Lemon.gd" type="Script" id=1]
[ext_resource path="res://src/Sounds/01 - MMX - X Regular Shot.wav" type="AudioStream" id=2]
[ext_resource path="res://src/Actors/Weapons/Projectiles/lemon.res" type="SpriteFrames" id=3]
[ext_resource path="res://src/Effects/Basic Hit.tscn" type="PackedScene" id=4]
[ext_resource path="res://SpriteEffect.gd" type="Script" id=5]
[ext_resource path="res://src/Effects/Deflect/lemon_deflect.png" type="Texture" id=6]
[ext_resource path="res://src/Effects/Materials/buster_lemon_particle.tres" type="Material" id=7]
[ext_resource path="res://src/Levels/Primrose/rotation_disabler.gd" type="Script" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15, 11 )

[node name="Lemon" type="KinematicBody2D" groups=["Player Projectile"]]
z_index = 6
collision_layer = 4
collision_mask = 0
script = ExtResource( 1 )
time_outside_screen = 0.2
fire_sound = ExtResource( 2 )

[node name="animatedSprite" type="AnimatedSprite" parent="."]
frames = ExtResource( 3 )
animation = "Tag"
frame = 6
playing = true

[node name="collisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1, 0 )
shape = SubResource( 1 )

[node name="visibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -3, -2.98023e-07 )
scale = Vector2( 1, 0.3 )

[node name="particles2D" type="Particles2D" parent="."]
position = Vector2( -10, 0 )
amount = 4
lifetime = 0.54
local_coords = false
process_material = ExtResource( 7 )

[node name="audioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
pause_mode = 2
volume_db = -12.671
max_distance = 640.0
bus = "SFX"

[node name="Hit Particle" parent="." instance=ExtResource( 4 )]
pause_mode = 2
position = Vector2( 14, 0 )
horizontal_flip_chance = 0.5

[node name="disabler" type="Node" parent="Hit Particle"]
script = ExtResource( 8 )
fade_out = true

[node name="deflect_particle" type="Sprite" parent="."]
visible = false
position = Vector2( 12, -2 )
z_index = 8
z_as_relative = false
texture = ExtResource( 6 )
hframes = 3
vframes = 2
script = ExtResource( 5 )
animation_speed = 32.0
one_shot = true

[node name="disabler" type="Node" parent="deflect_particle"]
script = ExtResource( 8 )
fade_out = true

[node name="disabler" type="Node" parent="."]
script = ExtResource( 8 )
fade_out = true
delete_after_fade = true
